--- a/client/app/views/bartInfo.html
+++ b/client/app/views/bartInfo.html
@@ -104,6 +104,6 @@
     <option value="WOAK">West Oakland</option>
   </select>
   </div>
-  <button type="submit" class="btn-primary btn-sm" style="position: absolute; left: 285px; z-index:1;">SUBMIT</button>
+  <button type="submit" class="btn-primary btn-sm" style="position: absolute; padding-left: 260px; z-index:1;">SUBMIT</button>
 </form>
 </d3-stations>
